<?xml version="1.0"?> 
<package format="2">
  <!-- This is a Catkin package.xml file to optionally support building DART in
       a Catkin workspace. Catkin is not required to build DART. For more
       information, see: http://ros.org/reps/rep-0136.html -->
  <name>dartsim</name>
  <version>6.3.1</version>
  <description>
    DART (Dynamic Animation and Robotics Toolkit) is a collaborative,
    cross-platform, open source library created by the Georgia Tech Graphics
    Lab and Humanoid Robotics Lab, with ongoing support by the University
    of Washington Personal Robotics Lab and Open Robotics. DART provides data
    structures and algorithms for kinematic and dynamic applications in robotics
    and computer animation.
  </description>
  <url type="website">http://dartsim.github.io/</url>
  <url type="repository">https://github.com/dartsim/dart</url>
  <url type="bugtracker">https://github.com/dartsim/dart/issues</url>
  <maintainer email="grey@openrobotics.org">Michael X. Grey</maintainer>
  <author email="jslee02@gmail.com">Jeongseok Lee</author>
  <author email="karenliu@cc.gatech.edu">C. Karen Liu</author>
  <author>Mike Stilman</author>
  <license>BSD</license>
  <build_depend>pkg-config</build_depend>
  <depend>assimp</depend>
  <depend>bullet</depend>
  <depend>eigen</depend>
  <depend>fcl_catkin</depend>
  <depend>glut</depend>
  <depend>libflann-dev</depend>
  <depend>liburdfdom-dev</depend>
  <depend>libxi-dev</depend>
  <depend>libxmu-dev</depend>
  <depend>tinyxml</depend>
  <depend>tinyxml2</depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
