# Copyright (c) 2011, The DART development contributors
# All rights reserved.

[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.9.2", "requests"]
build-backend = "scikit_build_core.build"

[project]
name = "dartpy"
dynamic = ["version"]
description = "Python API of Dynamic Animation and Robotics Toolkit."
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-2-Clause"
authors = [{ name = "Jeongseok Lee", email = "jslee02@gmail.com" }]
keywords = ["dartsim", "robotics"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: Robot Framework",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
]
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest>=6.0"]

[project.urls]
Homepage = "https://github.com/dartsim/dart.git"
Repository = "https://github.com/dartsim/dart.git"

[tool.scikit-build]
# Build directory
build-dir = "build/{wheel_tag}"
# Enable verbose build output
build.verbose = true
# Dynamic metadata
metadata.version.provider = "scikit_build_core.metadata.regex"
metadata.version.input = "package.xml"
metadata.version.regex = "<version>(?P<value>[0-9]+\\.[0-9]+\\.[0-9]+(?:\\.(dev|alpha|beta|rc)[0-9]+)?)</version>"

[tool.scikit-build.cmake]
# CMake version requirement
version = ">=3.22.1"
# CMake build type
build-type = "Release"

[tool.scikit-build.cmake.define]
# Build configuration for wheels (static linking, minimal dependencies)
BUILD_SHARED_LIBS = "OFF"
DART_BUILD_DARTPY = "ON"
DART_BUILD_GUI = "ON"
DART_ENABLE_SIMD = "OFF"
DART_BUILD_WHEELS = "ON"
DART_TREAT_WARNINGS_AS_ERRORS = "OFF"
DART_VERBOSE = "ON"
DART_USE_SYSTEM_IMGUI = "OFF"

[tool.black]
exclude = '/(build|dist|docs|examples|external|python|\.pixi)/'

[tool.isort]
profile = "black"
skip = ['build', 'dist', 'docs', 'examples', 'external', 'python', '.pixi']

[tool.mypy]
python_version = "3.7"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]
