# Copyright (c) 2011-2025, The DART development contributors
# All rights reserved.

[build-system]
# Pin fallback PyPA CMake below 4.3.4: that release regressed GLUT/OpenGL
# detection in DART 6 wheel builds, so find_package(GLUT) fails, dart-gui is
# skipped, and dartpy aborts with "Cannot find the library dart-gui".
# The Pixi wheel tasks use the Pixi CMake package directly.
requires = ["setuptools>=42", "wheel", "ninja", "cmake>=3.12,<4.3.4"]
build-backend = "setuptools.build_meta"

[tool.black]
exclude = '/(build|dist|docs|examples|external|python|\.pixi)/'

[tool.isort]
profile = "black"
skip = ['build', 'dist', 'docs', 'examples', 'external', 'python', '.pixi']

[tool.mypy]
files = "setup.py"
python_version = "3.7"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["ninja"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]
